--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,38 +1,50 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="78d6a3">  <td>19/01/24 02:51:20</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC04.checkGalactioNavigation()[pri:0, instance:testCases.TC04@76505305]">checkGalactioNavigation</td> 
-  <td>TestNG@393378656</td>   <td></td> </tr>
-<tr bgcolor="71b3bc">  <td>19/01/24 02:51:20</td>   <td>-438</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC03.checkMobileAppNavigation()[pri:0, instance:testCases.TC03@1aafa419]">checkMobileAppNavigation</td> 
-  <td>TestNG@2140300584</td>   <td></td> </tr>
-<tr bgcolor="729d65">  <td>19/01/24 02:51:20</td>   <td>-74</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC05.checkSGGPSNavigation()[pri:0, instance:testCases.TC05@59474f18]">checkSGGPSNavigation</td> 
-  <td>TestNG@1727778995</td>   <td></td> </tr>
-<tr bgcolor="b0f2b9">  <td>19/01/24 02:51:00</td>   <td>-20781</td> <td title="&gt;&gt;SuitClass.endLog()[pri:0, instance:testCases.TC05@59474f18]">&gt;&gt;endLog</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1534745514</td>   <td></td> </tr>
-<tr bgcolor="b0f2b9">  <td>19/01/24 02:51:00</td>   <td>-20758</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SuitClass.init()[pri:0, instance:testCases.TC05@59474f18]">&gt;&gt;init</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG@1727778995</td>   <td></td> </tr>
-<tr bgcolor="b0f2b9">  <td>19/01/24 02:51:00</td>   <td>-20758</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SuitClass.init()[pri:0, instance:testCases.TC03@1aafa419]">&gt;&gt;init</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG@2140300584</td>   <td></td> </tr>
-<tr bgcolor="b0f2b9">  <td>19/01/24 02:51:00</td>   <td>-20758</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SuitClass.init()[pri:0, instance:testCases.TC02@7c7b252e]">&gt;&gt;init</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG@1902688176</td>   <td></td> </tr>
-<tr bgcolor="b0f2b9">  <td>19/01/24 02:51:00</td>   <td>-20758</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SuitClass.init()[pri:0, instance:testCases.TC04@76505305]">&gt;&gt;init</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG@393378656</td>   <td></td> </tr>
-<tr bgcolor="b0f2b9">  <td>19/01/24 02:51:00</td>   <td>-20758</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SuitClass.init()[pri:0, instance:testCases.TC01@74f0ea28]">&gt;&gt;init</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG@275269961</td>   <td></td> </tr>
-<tr bgcolor="60bcab">  <td>19/01/24 02:51:21</td>   <td>188</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC01.invalidLogin()[pri:0, instance:testCases.TC01@74f0ea28]">invalidLogin</td> 
-  <td>TestNG@275269961</td>   <td></td> </tr>
-<tr bgcolor="c0cdad">  <td>19/01/24 02:51:20</td>   <td>9</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC02.invalidRegister()[pri:0, instance:testCases.TC02@7c7b252e]">invalidRegister</td> 
-  <td>TestNG@1902688176</td>   <td></td> </tr>
-<tr bgcolor="b0f2b9">  <td>19/01/24 02:51:28</td>   <td>8091</td> <td title="&lt;&lt;SuitClass.startLog()[pri:0, instance:testCases.TC05@59474f18]">&lt;&lt;startLog</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1534745514</td>   <td></td> </tr>
-<tr bgcolor="b0f2b9">  <td>19/01/24 02:51:25</td>   <td>4511</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SuitClass.tearDown()[pri:0, instance:testCases.TC02@7c7b252e]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG@1902688176</td>   <td></td> </tr>
-<tr bgcolor="b0f2b9">  <td>19/01/24 02:51:26</td>   <td>6118</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SuitClass.tearDown()[pri:0, instance:testCases.TC04@76505305]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG@393378656</td>   <td></td> </tr>
-<tr bgcolor="b0f2b9">  <td>19/01/24 02:51:27</td>   <td>6715</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SuitClass.tearDown()[pri:0, instance:testCases.TC03@1aafa419]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG@2140300584</td>   <td></td> </tr>
-<tr bgcolor="b0f2b9">  <td>19/01/24 02:51:27</td>   <td>6736</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SuitClass.tearDown()[pri:0, instance:testCases.TC05@59474f18]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG@1727778995</td>   <td></td> </tr>
-<tr bgcolor="b0f2b9">  <td>19/01/24 02:51:28</td>   <td>7235</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SuitClass.tearDown()[pri:0, instance:testCases.TC01@74f0ea28]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG@275269961</td>   <td></td> </tr>
+<tr bgcolor="e196d3">  <td>19/01/24 03:53:25</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC04.checkGalactioNavigation()[pri:0, instance:testCases.TC04@c8e4bb0]">checkGalactioNavigation</td> 
+  <td>TestNG@1033084392</td>   <td></td> </tr>
+<tr bgcolor="98c59b">  <td>19/01/24 03:54:05</td>   <td>39328</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC06.checkLegend()[pri:0, instance:testCases.TC06@7f77e91b]">checkLegend</td> 
+  <td>TestNG@1452087911</td>   <td></td> </tr>
+<tr bgcolor="bb6bea">  <td>19/01/24 03:54:05</td>   <td>39335</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC07.checkLegend()[pri:0, instance:testCases.TC07@8b96fde]">checkLegend</td> 
+  <td>TestNG@1720404999</td>   <td></td> </tr>
+<tr bgcolor="6db3b2">  <td>19/01/24 03:53:24</td>   <td>-992</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC03.checkMobileAppNavigation()[pri:0, instance:testCases.TC03@971d0d8]">checkMobileAppNavigation</td> 
+  <td>TestNG@1720404999</td>   <td></td> </tr>
+<tr bgcolor="b46fba">  <td>19/01/24 03:53:24</td>   <td>-991</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC05.checkSGGPSNavigation()[pri:0, instance:testCases.TC05@770c2e6b]">checkSGGPSNavigation</td> 
+  <td>TestNG@1452087911</td>   <td></td> </tr>
+<tr bgcolor="6dbfa5">  <td>19/01/24 03:52:25</td>   <td>-60397</td> <td title="&gt;&gt;SuitClass.endLog()[pri:0, instance:testCases.TC07@8b96fde]">&gt;&gt;endLog</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@360067785</td>   <td></td> </tr>
+<tr bgcolor="6dbfa5">  <td>19/01/24 03:52:25</td>   <td>-60373</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SuitClass.init()[pri:0, instance:testCases.TC03@971d0d8]">&gt;&gt;init</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG@1720404999</td>   <td></td> </tr>
+<tr bgcolor="6dbfa5">  <td>19/01/24 03:52:25</td>   <td>-60373</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SuitClass.init()[pri:0, instance:testCases.TC04@c8e4bb0]">&gt;&gt;init</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG@1033084392</td>   <td></td> </tr>
+<tr bgcolor="6dbfa5">  <td>19/01/24 03:52:25</td>   <td>-60373</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SuitClass.init()[pri:0, instance:testCases.TC01@525b461a]">&gt;&gt;init</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG@1922826556</td>   <td></td> </tr>
+<tr bgcolor="6dbfa5">  <td>19/01/24 03:52:25</td>   <td>-60373</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SuitClass.init()[pri:0, instance:testCases.TC05@770c2e6b]">&gt;&gt;init</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG@1452087911</td>   <td></td> </tr>
+<tr bgcolor="6dbfa5">  <td>19/01/24 03:52:25</td>   <td>-60373</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SuitClass.init()[pri:0, instance:testCases.TC02@6b53e23f]">&gt;&gt;init</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG@267131721</td>   <td></td> </tr>
+<tr bgcolor="6dbfa5">  <td>19/01/24 03:53:47</td>   <td>21733</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SuitClass.init()[pri:0, instance:testCases.TC06@7f77e91b]">&gt;&gt;init</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG@1452087911</td>   <td></td> </tr>
+<tr bgcolor="6dbfa5">  <td>19/01/24 03:53:47</td>   <td>21734</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SuitClass.init()[pri:0, instance:testCases.TC07@8b96fde]">&gt;&gt;init</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG@1720404999</td>   <td></td> </tr>
+<tr bgcolor="a2d7b5">  <td>19/01/24 03:53:24</td>   <td>-991</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC01.invalidLogin()[pri:0, instance:testCases.TC01@525b461a]">invalidLogin</td> 
+  <td>TestNG@1922826556</td>   <td></td> </tr>
+<tr bgcolor="d98fe2">  <td>19/01/24 03:53:24</td>   <td>-992</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC02.invalidRegister()[pri:0, instance:testCases.TC02@6b53e23f]">invalidRegister</td> 
+  <td>TestNG@267131721</td>   <td></td> </tr>
+<tr bgcolor="6dbfa5">  <td>19/01/24 03:54:16</td>   <td>50366</td> <td title="&lt;&lt;SuitClass.startLog()[pri:0, instance:testCases.TC07@8b96fde]">&lt;&lt;startLog</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@360067785</td>   <td></td> </tr>
+<tr bgcolor="6dbfa5">  <td>19/01/24 03:53:40</td>   <td>14566</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SuitClass.tearDown()[pri:0, instance:testCases.TC03@971d0d8]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG@1720404999</td>   <td></td> </tr>
+<tr bgcolor="6dbfa5">  <td>19/01/24 03:53:40</td>   <td>14762</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SuitClass.tearDown()[pri:0, instance:testCases.TC05@770c2e6b]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG@1452087911</td>   <td></td> </tr>
+<tr bgcolor="6dbfa5">  <td>19/01/24 03:53:48</td>   <td>22840</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SuitClass.tearDown()[pri:0, instance:testCases.TC02@6b53e23f]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG@267131721</td>   <td></td> </tr>
+<tr bgcolor="6dbfa5">  <td>19/01/24 03:53:53</td>   <td>28202</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SuitClass.tearDown()[pri:0, instance:testCases.TC01@525b461a]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG@1922826556</td>   <td></td> </tr>
+<tr bgcolor="6dbfa5">  <td>19/01/24 03:54:06</td>   <td>40315</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SuitClass.tearDown()[pri:0, instance:testCases.TC07@8b96fde]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG@1720404999</td>   <td></td> </tr>
+<tr bgcolor="6dbfa5">  <td>19/01/24 03:54:06</td>   <td>40415</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SuitClass.tearDown()[pri:0, instance:testCases.TC06@7f77e91b]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG@1452087911</td>   <td></td> </tr>
+<tr bgcolor="6dbfa5">  <td>19/01/24 03:54:14</td>   <td>49095</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SuitClass.tearDown()[pri:0, instance:testCases.TC04@c8e4bb0]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG@1033084392</td>   <td></td> </tr>
 </table>
